--- a/src/components/SEMTracking.astro
+++ b/src/components/SEMTracking.astro
@@ -40,7 +40,7 @@ const { conversionId, conversionLabel } = Astro.props;
   "@type": "ProfessionalService",
   "name": "Asesores Seguros Monterrey - New York Life",
   "description": "Asesores especializados en seguros New York Life en Monterrey. Cotizaciones gratuitas y atención personalizada.",
-  "url": "https://mnyl.com.mx/asesores-seguros-monterrey-nyl/",
+  "url": "https://segurosrp.com/asesores-seguros-monterrey-nyl/",
   "telephone": "+52-81-8388-6050",
   "address": {
     "@type": "PostalAddress",
