--- a/src/pages/asesores-seguros-monterrey-nyl/index.astro
+++ b/src/pages/asesores-seguros-monterrey-nyl/index.astro
@@ -473,7 +473,7 @@ const keywords = 'asesores seguros monterrey, seguros monterrey asesores, new yo
 		"@type": "LocalBusiness",
 		"name": "Seguros RP - Asesores New York Life Monterrey",
 		"description": "Asesores especializados en seguros New York Life en Seguros Monterrey. Seguros de vida, salud y patrimonio con atención personalizada.",
-		"url": "https://mnyl.com.mx/asesores-seguros-monterrey-nyl/",
+		"url": "https://segurosrp.com/asesores-seguros-monterrey-nyl/",
 		"telephone": "+52-81-8388-6050",
 		"address": {
 			"@type": "PostalAddress",
@@ -562,16 +562,16 @@ const keywords = 'asesores seguros monterrey, seguros monterrey asesores, new yo
 		<meta property="og:title" content="{title}">
 		<meta property="og:description" content="{description}">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://mnyl.com.mx/asesores-seguros-monterrey-nyl/">
-		<meta property="og:image" content="https://mnyl.com.mx/Logo_New_York_Life.svg">
+		<meta property="og:url" content="https://segurosrp.com/asesores-seguros-monterrey-nyl/">
+		<meta property="og:image" content="https://segurosrp.com/Logo_New_York_Life.svg">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="{title}">
 		<meta name="twitter:description" content="{description}">
 		
 		<!-- Canonical URL -->
-		<link rel="canonical" href="https://mnyl.com.mx/asesores-seguros-monterrey-nyl/">
+		<link rel="canonical" href="https://segurosrp.com/asesores-seguros-monterrey-nyl/">
 		
 		<!-- Hreflang para SEO local -->
-		<link rel="alternate" hreflang="es-mx" href="https://mnyl.com.mx/asesores-seguros-monterrey-nyl/">
+		<link rel="alternate" hreflang="es-mx" href="https://segurosrp.com/asesores-seguros-monterrey-nyl/">
 	</Fragment>
 </Layout>
