--- a/src/pages/asesores-seguros-monterrey/index.astro
+++ b/src/pages/asesores-seguros-monterrey/index.astro
@@ -80,7 +80,7 @@ const business = {
       "@type": "BreadcrumbList",
       "itemListElement": [
         {"@type":"ListItem","position":1,"name":"Inicio","item": site},
-        {"@type":"ListItem","position":2,"name":"Asesoría en Seguros","item": `${site}/asesoria`},
+        {"@type":"ListItem","position":2,"name":"Asesoría en Seguros","item": `${site}/asesores-seguros-monterrey#form`},
         {"@type":"ListItem","position":3,"name":"Asesores Seguros Monterrey","item": canonical}
       ]
     })}></script>
