--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,9 +12,9 @@
             ¡Somos Asesores Certificados en <span class="text-rp-orange">Seguros Monterrey</span>!
           </h1>
           <p class="text-xl mb-8">Expertos en protección y tranquilidad para ti y tu familia</p>
-          <button class="bg-rp-white text-rp-blue px-8 py-4 rounded-full text-lg font-semibold hover:bg-rp-orange hover:text-white transition duration-300 w-fit">
+            <a href="https://api.whatsapp.com/send/?phone=524461354113" target="_blank" class="bg-rp-white text-rp-blue px-8 py-4 rounded-full text-lg font-semibold hover:bg-rp-orange hover:text-white transition duration-300 w-fit inline-block text-center">
             ¿Necesitas asesoría? ¡Hablemos!
-          </button>
+            </a>
         </div>
         <div class="relative h-full flex flex-col justify-end items-center">
           <!-- Logo New York Life -->
@@ -32,9 +32,9 @@
           ¡Somos Asesores Certificados en <span class="text-rp-orange">Seguros Monterrey</span>!
         </h1>
         <p class="text-xl mb-6">Expertos en protección y tranquilidad para ti y tu familia</p>
-        <button class="bg-rp-white text-rp-blue px-8 py-4 rounded-full text-lg font-semibold hover:bg-rp-orange hover:text-white transition duration-300 w-fit">
+        <a href="https://api.whatsapp.com/send/?phone=524461354113" target="_blank" class="bg-rp-white text-rp-blue px-8 py-4 rounded-full text-lg font-semibold hover:bg-rp-orange hover:text-white transition duration-300 w-fit inline-block text-center">
           ¿Necesitas asesoría? ¡Hablemos!
-        </button>
+        </a>
       </div>
     </div>
   </div>
